Updated footer to prevent overlap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -101,9 +101,15 @@ span {
 }
 
 footer {
-    position: fixed;
-    bottom: 10px;
-    right: 50%;
+   text-align: center;
+}
+
+.about {
+    margin-left: 25px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-family: "Open Sans", sans-serif;
+    height: 30vh;
 }
 
 .thumbnail {
@@ -142,7 +148,7 @@ footer {
     font-size: 30px;
     font-family: "Argos"
 }
-/* Zack's CSS ends */
+
 .image-container {
     display: grid;
     height: 300px;
